# pigment

./: .clang-format  .envrc  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  cliff.toml  devbox.json  run.sh
examples/: main.cpp
include/pigment/: named_colors.hpp  palette.hpp  pigment.hpp  types_basic.hpp  types_hsl.hpp  types_hsv.hpp  types_lab.hpp  types_line.hpp  utils.hpp
test/: test_color.cpp  test_edge_cases.cpp  test_hsl.cpp  test_hsv.cpp  test_lab.cpp  test_mono.cpp  test_named_colors.cpp  test_palette.cpp  test_performance.cpp  test_rgb.cpp  test_utils.cpp
